objects/zqu__UserProductFilter__c.object
<CustomObject>
    <description>A filter to be used by end users in a Guided Selling Part of type Filter to filter products based on custom fields of a Product, Product Rate Plan or Product Rate Plan Charge.</description>
    <fields>
        <fullName>zqu__FieldName__c</fullName>
        <description>The name of the field this User Product Filter applies to.</description>
        <inlineHelpText>The name of the field this User Product Filter applies to.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__GuidedSellingSection__c</fullName>
        <description>The Guided Selling Section this filter is used in (must be of type Filter).</description>
        <inlineHelpText>The Guided Selling Section this filter is used in (must be of type Filter).</inlineHelpText>
        <label>Guided Selling Section</label>
        <referenceTo>zqu__GuidedSellingSection__c</referenceTo>
        <relationshipLabel>User Product Filters</relationshipLabel>
        <relationshipName>UserProductFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__ObjectName__c</fullName>
        <description>The object type this filter applies to.</description>
        <inlineHelpText>The object type this filter applies to.</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Rate Plan</fullName>
                </value>
                <value>
                    <fullName>Product Rate Plan Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Order__c</fullName>
        <description>The order of this User Product Filter.</description>
        <inlineHelpText>The order of this User Product Filter.</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>User Product Filter</label>
    <nameField>
        <label>User Product Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Product Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>